<resources>
    <string name="app_name">AppNutrientes</string>
    <string name="digitar_nome">Qual seu nome?</string>
    <string name="informar_dados">Informe seus dados</string>
    <string name="digite_sua_altura">Digite sua altura:</string>
    <string name="digite_seu_peso">Digite seu peso:</string>
    <string name="pronto">Pronto</string>
    <string name="sedentario">Sedentário</string>
    <string name="lev_ativo">Levemente ativo</string>
    <string name="mod_ativo">Moderamente ativo</string>
    <string name="muito_ativo">Muito ativo</string>
    <string name="detalhar">Detalhar</string>
</resources>
