<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digitar_nome"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/btn_dados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/informar_dados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        android:onClick="irParaTela2"/>

    <TextView
        android:id="@+id/txt_dados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:text="Olá"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="109dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dados"
        android:layout_marginTop="32dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/txt_tmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="109dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dados"
        android:layout_marginTop="32dp"
        android:textSize="30sp"/>

    <RadioGroup
        android:id= "@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tmb"
        tools:layout_editor_absoluteY="378dp"
        android:visibility="invisible"
        android:layout_marginTop="32dp">
        <RadioButton android:id="@+id/radio_sed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedentario"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_lev_ativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lev_ativo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_mod_ativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod_ativo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_muito_ativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muito_ativo"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/txt_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="109dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio"
        android:layout_marginTop="16dp"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_detalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/detalhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_get"
        android:visibility="invisible"
        android:onClick="detalhar"/>

</android.support.constraint.ConstraintLayout>