<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="ahhhh"
        android:textAlignment="center"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_nome">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_seu_peso" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_nome"
        tools:layout_editor_absoluteY="221dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_sua_altura" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pronto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:onClick="mandarDados"/>

</android.support.constraint.ConstraintLayout>